added logout functionality, and added middelware to the secret route, so a user can't go to it without being logged in.

--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -1,2 +1,7 @@
 <h1>SECRET PAGE YOU FOUND ME!!!!</h1>
 <P>NOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO</P>
+
+
+<li><a href="/register">Sign Up!</a></li>
+<li><a href="/login">Login!</a></li>
+<li><a href="/logout">Logout!</a></li>
